--- a/package.json
+++ b/package.json
@@ -11,6 +11,11 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.1.14",
     "astro": "^5.14.5",
+    "astro-icon": "^1.1.5",
     "tailwindcss": "^4.1.14"
+  },
+  "devDependencies": {
+    "@iconify-json/heroicons": "^1.2.3",
+    "@iconify-json/logos": "^1.2.9"
   }
 }
